Fix location issue on portrait media size, but still overlaps

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8675,30 +8675,37 @@ a.button.big.wide.smooth-scroll-middle.navigation {
 
 }
 
-div.image.header {
-	width: 40rem;
-}
-
 .headshot-welcome-wrapper {
 	display: flex;
 	justify-content: center;
-	/* border-radius: 100%; */
-	/* height: 100%;
-	width: 100%; */
-	/* width: 3vw; */
 	height: 20vh;
 	justify-content: center;
   align-items: center;
 }
 
-.image.header {
+div.image.header {
+	/* width: 40rem;
+	max-width: 50%;
+	height: auto; */
 }
 
-img.headshot {
-	clip-path: circle(200px at center);
-	max-height: 100%;
-	/* width: 100%; */
-	/* height: 100vh; */
+
+.headshot {
+	/* clip-path: circle(200px at center); */
+	border-radius: 50% !important;
+	/* max-width: 60% !important;
+	height: auto !important; */
+}
+
+@media (orientation: portrait) {
+	.headshot {
+		/* width: 50%; */
+		/* height: 50; */
+		position: absolute;
+    top: 80% !important;
+    left: 50% !important;
+    transform: translate(-50%, -50%);
+	}
 }
 
 div.education-employment-container {
